--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 
       function sendLocation() {
         setTimeout(function () {
-          // var CurrentLocation = window.location.href;
-          // lpTag.newPage(CurrentLocation, { section: "production" });
+          var CurrentLocation = window.location.href;
+          lpTag.newPage(CurrentLocation, { section: "vfalbania5" });
           lpTag.sdes.push({
             type: "ctmrinfo",
             info: {
