--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       function sendLocation() {
         setTimeout(function () {
           var CurrentLocation = window.location.href;
-          lpTag.newPage(CurrentLocation, { section: "vfalbania5" });
+          lpTag.newPage(CurrentLocation, { section: "staging" });
           lpTag.sdes.push({
             type: "ctmrinfo",
             info: {
