--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       function sendLocation() {
         setTimeout(function () {
           var CurrentLocation = window.location.href;
-          lpTag.newPage(CurrentLocation, { section: "enhanced" });
+          lpTag.newPage(CurrentLocation, { section: "staging" });
           lpTag.sdes.push({
             type: "ctmrinfo",
             info: {
